# viz-rep

./: .gitignore  design.txt  pyproject.toml  todo.txt
.claude/: learning-matplot-progress.md  project-log.md
.claude/skills/insight-draft/: SKILL.md
.claude/skills/learn-vis-matplot/: SKILL.md
.claude/skills/viz-architect/: SKILL.md
.claude/skills/whatif/: SKILL.md
archive/analyze/ibm_hr/: main.py
archive/learning/.zed/: tasks.json
archive/learning/learn-scripts/: china_mili_bars.py  learn_waterfall_chart.py
archive/old_sandbox/: build_report.py  extract_palette.py
sandbox/: main.py  palette_steps.py  test.py  themed_chart.py
sandbox/data/: allocation.parquet  allocation_wide.parquet  palettes.json  small_multiples_mock.parquet
sandbox/output/: gen_Insight_CVM_PCB_Card_Analysis.xlsx
sandbox/src/: dataclass_approach.py  dict_approach.py  read_data.py  themes.py
src/: colors.py  dataset.py  fonts.py  styles.py  vizzy.py
src/charts/: __init__.py  bar.py  base.py  line.py
src/custom/: colors.py  formatting.py
src/report/: build.py  cli.py  combine.py  outline.py  xlsx_insight_lib.py
story/pcb_bank/: insight_outline.txt  main.py  profile_run.py
story/pcb_card/: main.py
tests/: conftest.py  dataset_factory.py  test_charts_bar.py  test_charts_line.py  test_charts_registry.py  test_colors.py  test_dataset.py  test_formatting.py  test_report_combine.py  test_report_outline.py
tests/gallery/: color_preview.py  font_preview.py  run.py
tools/live_view/: README.md  live_view.html  serve.py
viz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+37 files in other folders)
