[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "viz"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "polars",
    "duckdb",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
